# rplay

./: .gitignore  Cargo.toml  db.bk  deezer.py  deeznuts.js  diff.txt  ok.og  shell.nix  td.sh  todo
migrations/: 20241107183251_init.down.sql  20241107183251_init.up.sql  20250108152717_album_contributors.down.sql  20250108152717_album_contributors.up.sql  current.sql
src/: action.rs  db.rs  deezer.rs  download.rs  lev.rs  lib.rs  main.rs  query.rs
src/download/: deezer.rs  mod.rs
