[package]
name = "rplay"
version = "0.1.0"
edition = "2021"

[dependencies]
dotenvy = "0.15.7"
regex = "1.11.1"
reqwest = "0.12.9"
serde = { version = "1.0.214", features = ["derive"] }
serde_json = "1.0.132"
thiserror = "2.0.0"
tokio = { version = "1.41.0", features = ["macros", "rt-multi-thread"] }
